2010-08-09  Evan Martin  <evan@chromium.org>

Reviewed by Tony Chang.

        [chromium] DRT error print statement incorrectly tries to print a FILE*
        https://bugs.webkit.org/show_bug.cgi?id=43747

        * DumpRenderTree/chromium/ImageDiff.cpp:
        (writeFile): pass the correct pointer.

Canonical link: https://commits.webkit.org/55822@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65015 268f45cc-cd09-0410-ab3c-d52691b4dbfc