WebKitTools/DumpRenderTree/chromium/ImageDiff.cpp
@@ -321,12 +321,12 @@ static bool writeFile(const char* outFile, const unsigned char* data, size_t dat
 {
     FILE* file = fopen(outFile, "wb");
     if (!file) {
-        fprintf(stderr, "ImageDiff: Unable to create file \"%s\"\n", file);
+        fprintf(stderr, "ImageDiff: Unable to create file \"%s\"\n", outFile);
         return false;
     }
     if (dataSize != fwrite(data, 1, dataSize, file)) {
         fclose(file);
-        fprintf(stderr, "ImageDiff: Unable to write data to file \"%s\"\n", file);
+        fprintf(stderr, "ImageDiff: Unable to write data to file \"%s\"\n", outFile);
         return false;
     }
     fclose(file);
